--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
-    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9"
+  },
+  "devDependencies": {
+    "redux-logger": "^3.0.6"
   },
   "description": "Listener is a social music streaming platform cloned after Spotify. Begins W8D2 - 10/1/2019",
   "version": "1.0.0",
